# PathTracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  main.cpp
app/: CMakeLists.txt
app/src/: main.cpp
include/: architecture.hpp  frame_buffer.hpp  layout.hpp  norm_3.hpp  norm_4.hpp  vec_3.hpp  vec_4.hpp  vector_buffer.hpp
src/: architecture.cpp  frame_buffer.cpp  layout.cpp  norm_3.cpp  norm_4.cpp  stb_image_impl.c  vec_3.cpp  vec_4.cpp  vector_buffer.cpp
test/: CMakeLists.txt
test/src/: main.cpp  vec_4.cpp
